--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,45 @@
+html,
+body,
+#root,
+.App {
+	height: 100%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+	monospace;
 }
 button,
 #button-like {
-  border-radius: 1px;
-  background-color: #333;
-  border: none;
-  color: white;
-  padding: 0.5rem 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin-left: 1rem;
-  font-size: 16px;
+	border-radius: 1px;
+	background-color: #333;
+	border: none;
+	color: white;
+	padding: 0.5rem 25px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	margin-left: 1rem;
+	font-size: 16px;
 }
 button:hover:enabled {
-  background-color: #ddd;
-  color: black;
+	background-color: #ddd;
+	color: black;
 }
 button:disabled {
-  background-color: silver;
+	background-color: silver;
 }
 input {
-  border: 1px lightgray solid;
-  border-radius: 1px;
-  font-size: 1em;
-  padding: 0.5em;
+	border: 1px lightgray solid;
+	border-radius: 1px;
+	font-size: 1em;
+	padding: 0.5em;
 }
