--- a/src/components/ImageChooser.css
+++ b/src/components/ImageChooser.css
@@ -13,10 +13,10 @@
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 50px;
+  margin: 1% 60% 1% 1%; /* 15% from the top and centered */
+  padding: 20px;
   border: 1px solid #888;
-  width: 60%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
