--- a/src/components/ImageChooser.css
+++ b/src/components/ImageChooser.css
@@ -1,6 +1,6 @@
 .modal {
   position: fixed; /* Stay in place */
-  z-index: 1000; /* Sit on top */
+  z-index: 100; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -13,15 +13,17 @@
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 1% 60% 1% 1%; /* 15% from the top and centered */
+  margin: 5%;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 60%; /* Could be more or less, depending on screen size */
+  height: 80%;
 }
 
 /* The Close Button */
 .close {
   color: #aaa;
+  align-self: flex-end;
   float: right;
   font-size: 28px;
   font-weight: bold;
