--- a/src/components/ImageChooser.css
+++ b/src/components/ImageChooser.css
@@ -12,9 +12,16 @@
 
 /* Modal Content/Box */
 .modal-content {
+  overflow: visible;
+  margin: 5%;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
   margin: auto;
-  max-width: 500px;
-  height: 100%;
+  height: 90%;
+  width: 60%;
 }
 
 /* The Close Button */
