--- a/src/components/ImageChooser.css
+++ b/src/components/ImageChooser.css
@@ -1,32 +1,31 @@
-.modal {
+.cardmodal {
   position: fixed; /* Stay in place */
-  z-index: 100; /* Sit on top */
+  z-index: 1000; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 /* Modal Content/Box */
-.modal-content {
+.cardmodal-content {
+  position: relative;
+  flex: 1 1 50%;
+  margin-top: 5%;
   overflow: visible;
-  margin: 5%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-  margin: auto;
-  width: 30%;
+  width: 50%;
 }
 
 /* The Close Button */
 .close {
+  position: sticky;
+  top: 25;
+  right: 0;
   color: #aaa;
-  align-self: flex-end;
-  float: right;
   font-size: 28px;
   font-weight: bold;
 }
