--- a/src/components/CardList.module.css
+++ b/src/components/CardList.module.css
@@ -1,4 +1,14 @@
 .cardlist {
+  width: 100%;
+  flex: 1 1 100%;
   border: none;
   outline: none;
+}
+
+.cardlistTable {
+  width: 100%;
+  table-layout: auto;
+}
+.cardlistTableDark {
+  background-color: #333;
 }
